objects/IP_Request__c.object
<CustomObject>
    <description>This object is to capture information for new IP requests by both internal and external users.</description>
    <fields>
        <fullName>AE__c</fullName>
        <label>AE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASIC_Sizing_by__c</fullName>
        <label>ASIC Sizing by</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cores</fullName>
                </value>
                <value>
                    <fullName>HSS</fullName>
                </value>
                <value>
                    <fullName>Methodology</fullName>
                </value>
                <value>
                    <fullName>Test/PE</fullName>
                </value>
                <value>
                    <fullName>TAE</fullName>
                </value>
                <value>
                    <fullName>Design Center</fullName>
                </value>
                <value>
                    <fullName>Library/IO/Arrays</fullName>
                </value>
                <value>
                    <fullName>Img/Pkg</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Processors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Manager_Cell_Phone__c</fullName>
        <description>Account Manager Cell Phone</description>
        <inlineHelpText>Account Manager Cell Phone</inlineHelpText>
        <label>Account Manager Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Email__c</fullName>
        <description>Email of the Account Manager</description>
        <inlineHelpText>Primary Account Manager Email</inlineHelpText>
        <label>Account Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Name__c</fullName>
        <description>Primary Account Manager Name</description>
        <inlineHelpText>Primary Account Manager Name</inlineHelpText>
        <label>Account Manager Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Office_Phone__c</fullName>
        <description>Account Manager Office Phone</description>
        <inlineHelpText>Account Manager Office Phone</inlineHelpText>
        <label>Account Manager Office Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Phone__c</fullName>
        <description>Primary Account Manager Phone</description>
        <inlineHelpText>Primary Account Manager Phone</inlineHelpText>
        <label>Account Manager Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IP_RequestszBOZ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acknowledged_by_FAE__c</fullName>
        <label>Acknowledged by FAE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Additional_Mask_Info__c</fullName>
        <label>Additional Mask Info</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Opportunity_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Opportunity 1</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>IP Requests (Additional Opportunity 1)</relationshipLabel>
        <relationshipName>IP_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Opportunity_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Opportunity 2</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>IP Requests (Additional Opportunity 2)</relationshipLabel>
        <relationshipName>IP_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Questions__c</fullName>
        <formula>HYPERLINK(&quot;/apex/IPRQuestionaire?id=&quot;&amp;Id, &quot;Click here for additional questions&quot;,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Questions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjustment_Range_Dll__c</fullName>
        <label>Adjustment Range Dll</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjustment_Resolution_Dll__c</fullName>
        <label>Adjustment Resolution Dll</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_of_Funding_Approved__c</fullName>
        <label>Amount of Funding Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Communication_to_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Communication to Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approve_for_Full_Assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approve for Full Assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approve_for_Sizing_T__c</fullName>
        <label>Approve for Sizing (T)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approve_for_Sizing__c</fullName>
        <label>Approve for Sizing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approved_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approved_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IP_Requestsys70</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IP_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IP_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Aprprox_Dev_Funding_Available__c</fullName>
        <label>Aprprox. Dev Funding Available</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Architecture__c</fullName>
        <label>Architecture</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assumptions__c</fullName>
        <label>Assumptions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bid_approval_for_restricted_IP__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this request to get bid approval for restricted IP without core function or schedule changes?</inlineHelpText>
        <label>Bid approval for restricted IP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bist_Memory__c</fullName>
        <label>Bist Interface</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bit_Cell_Size_um2__c</fullName>
        <label>Bit Cell Size(um2)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Block_Size_Configurations__c</fullName>
        <label>Block Size Configurations</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bond_Pad_Opening_Size__c</fullName>
        <label>Bond Pad Opening Size</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bond_Pad_Pitch__c</fullName>
        <label>Bond Pad Pitch</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Built_In_Charge_Pump__c</fullName>
        <label>Built In Charge Pump</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Decision__c</fullName>
        <label>Business Decision</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>A&amp;D</fullName>
                </value>
                <value>
                    <fullName>ASIC</fullName>
                </value>
                <value>
                    <fullName>Foundry</fullName>
                </value>
                <value>
                    <fullName>RF Foundry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cache_Size__c</fullName>
        <label>Cache Size</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification__c</fullName>
        <label>Certification</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charging_Org__c</fullName>
        <label>Charging Org</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASIC Cores SCOGS</fullName>
                </value>
                <value>
                    <fullName>ASIC Cores SCOGS - Royalty</fullName>
                </value>
                <value>
                    <fullName>ASIC DC IPR</fullName>
                </value>
                <value>
                    <fullName>ASIC HSS SCOGS</fullName>
                </value>
                <value>
                    <fullName>ASIC HSS SCOGS - Royalty</fullName>
                </value>
                <value>
                    <fullName>ASIC PACKAGING SCOGS</fullName>
                </value>
                <value>
                    <fullName>ASIC IO/Lib SCOGS</fullName>
                </value>
                <value>
                    <fullName>ASIC Test PE SCOGS</fullName>
                </value>
                <value>
                    <fullName>ASIC ME FAB8 SCOGS</fullName>
                </value>
                <value>
                    <fullName>Other-Royalty</fullName>
                </value>
                <value>
                    <fullName>ASIC TAE IPR SCOGS</fullName>
                </value>
                <value>
                    <fullName>ASIC PFA IPR SCOGS</fullName>
                </value>
                <value>
                    <fullName>ASIC QARE SCOGS</fullName>
                </value>
                <value>
                    <fullName>TAPO/MPO Fndry IO/SC Lib SCOGS</fullName>
                </value>
                <value>
                    <fullName>TAPO/MPO Fndry Cores SCOGS</fullName>
                </value>
                <value>
                    <fullName>TAPO/MPO Fndry HSS Lib SCOGS</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Checkpoint_Date__c</fullName>
        <label>Checkpoint Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Competitor_Situation__c</fullName>
        <label>Competitor Situation</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Configurator_Plus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Configurator Plus</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>IP Requests</relationshipLabel>
        <relationshipName>IP_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_Type__c</fullName>
        <label>Core Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APU</fullName>
                </value>
                <value>
                    <fullName>CPU</fullName>
                </value>
                <value>
                    <fullName>GPU</fullName>
                </value>
                <value>
                    <fullName>MPU</fullName>
                </value>
                <value>
                    <fullName>NPU</fullName>
                </value>
                <value>
                    <fullName>DSP</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cup__c</fullName>
        <label>Cup</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Win_Probability__c</fullName>
        <label>Current Win Probability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Design Win</fullName>
                </value>
                <value>
                    <fullName>Highly Likely (&gt;75%)</fullName>
                </value>
                <value>
                    <fullName>Medium (25%-75%)</fullName>
                </value>
                <value>
                    <fullName>Low Probability (&lt; 25%)</fullName>
                </value>
                <value>
                    <fullName>Loss</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Account_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Associated Account</description>
        <inlineHelpText>Associated Account</inlineHelpText>
        <label>Customer Account Name</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3)</booleanFilter>
            <filterItems>
                <field>$Profile.UserType</field>
                <operation>equals</operation>
                <value>&apos;Standard&apos;</value>
            </filterItems>
            <filterItems>
                <field>$Profile.UserType</field>
                <operation>notEqual</operation>
                <value>&apos;Standard&apos;</value>
            </filterItems>
            <filterItems>
                <field>Account.Name</field>
                <operation>equals</operation>
                <valueField>$User.Parent_Account_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>IP Requests</relationshipLabel>
        <relationshipName>IP_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Communication_Prep_Internal__c</fullName>
        <label>Customer Communication Prep (Internal)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Customer_Expectation__c</fullName>
        <description>What does customer want to see before committing?</description>
        <inlineHelpText>What does customer want to see before committing?</inlineHelpText>
        <label>Customer Expectation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_IP_Contact_Email_Formula__c</fullName>
        <description>Customer IP Contact Email</description>
        <formula>Customer_IP_Contact_Name_Lkp__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Customer IP Contact Email</inlineHelpText>
        <label>Customer IP Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_IP_Contact_Name_Lkp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>[1.1 Customer Information] Customer IP Contact Name</description>
        <inlineHelpText>Associated Contact</inlineHelpText>
        <label>Customer IP Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>IP Requests</relationshipLabel>
        <relationshipName>IP_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_IP_Contact_Phone_Formula__c</fullName>
        <description>Customer IP Contact Phone</description>
        <formula>Customer_IP_Contact_Name_Lkp__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Customer IP Contact Phone</inlineHelpText>
        <label>Customer IP Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <description>Customer Name</description>
        <inlineHelpText>Customer Name</inlineHelpText>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Response_external__c</fullName>
        <label>Customer Response (external)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Customer_commits_to_design__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will Customer commit to design if IP is available?</description>
        <inlineHelpText>Will Customer commit to design if IP is available?</inlineHelpText>
        <label>Customer commits to design</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DIW_MDParts_Name__c</fullName>
        <label>DIW MDParts Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DIW_Project__c</fullName>
        <label>DIW Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Retention__c</fullName>
        <label>Data Retention</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deciding_T__c</fullName>
        <label>Deciding (T)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Density_Range__c</fullName>
        <label>Density Range</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependencies__c</fullName>
        <label>Dependencies</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Development_Sizing_Effort_MD__c</fullName>
        <label>Development Sizing Effort (MD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Development_Sizing_Effort__c</fullName>
        <label>Development Sizing Effort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Device_Tapeout_Date__c</fullName>
        <formula>Device__r.Actual_Tapeout_Date_GMT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Device Tapeout Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>IP Requests</relationshipLabel>
        <relationshipName>IP_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Die_Size_Estimator_Level_Sizing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Die-Size Estimator Level Sizing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Different_Supplier__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What type of New IP Request created?</description>
        <inlineHelpText>What type of New IP Request created?</inlineHelpText>
        <label>Different Supplier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dnl__c</fullName>
        <label>DNL</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dynamic_Power_Based_On_X1nand2__c</fullName>
        <label>Dynamic Power Based On X1 and X2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERD__c</fullName>
        <label>ERD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Application__c</fullName>
        <label>End Application</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>A&amp;D</fullName>
                </value>
                <value>
                    <fullName>Aerospace &amp; Defense</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>AMOLED Touch Panel</fullName>
                </value>
                <value>
                    <fullName>Apple Chipsets</fullName>
                </value>
                <value>
                    <fullName>Audio</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>AV Controller for Pachinko Machine</fullName>
                </value>
                <value>
                    <fullName>Avnet</fullName>
                </value>
                <value>
                    <fullName>AV Platform</fullName>
                </value>
                <value>
                    <fullName>Basestation</fullName>
                </value>
                <value>
                    <fullName>Big Data</fullName>
                </value>
                <value>
                    <fullName>Blueray</fullName>
                </value>
                <value>
                    <fullName>Bluetooth</fullName>
                </value>
                <value>
                    <fullName>Body</fullName>
                </value>
                <value>
                    <fullName>Broadband Client</fullName>
                </value>
                <value>
                    <fullName>Business Projector</fullName>
                </value>
                <value>
                    <fullName>Cable Modem</fullName>
                </value>
                <value>
                    <fullName>Camera</fullName>
                </value>
                <value>
                    <fullName>CCP</fullName>
                </value>
                <value>
                    <fullName>CDMA Femto</fullName>
                </value>
                <value>
                    <fullName>Cell Handset</fullName>
                </value>
                <value>
                    <fullName>Cellular Handsets</fullName>
                </value>
                <value>
                    <fullName>CNC</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Core routers</fullName>
                </value>
                <value>
                    <fullName>CoT</fullName>
                </value>
                <value>
                    <fullName>Data Center</fullName>
                </value>
                <value>
                    <fullName>Datacom/Telecom</fullName>
                </value>
                <value>
                    <fullName>Data Processing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Endurance_Mtp__c</fullName>
        <label>Endurance Mtp</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Esd_Cdm__c</fullName>
        <label>Esd Cdm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Esd_Hbm__c</fullName>
        <label>Esd Hbm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Esd_Mm__c</fullName>
        <label>Esd Mm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Complexity__c</fullName>
        <label>Estimated Complexity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very High (&gt;1yr $1M)</fullName>
                </value>
                <value>
                    <fullName>High (3-4Q, $0.5M-$1M)</fullName>
                </value>
                <value>
                    <fullName>Medium (2Q, $0.25M-$0.5M)</fullName>
                </value>
                <value>
                    <fullName>Low (1Q&lt;$0.25M)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Evaluators_or_Contacts__c</fullName>
        <label>Evaluators or Contacts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Existing_IP_Usage__c</fullName>
        <label>Existing IP Usage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expected1__c</fullName>
        <description>Expected Value of Year1 Wafer Starts</description>
        <inlineHelpText>Expected Value of Year1 Wafer Starts</inlineHelpText>
        <label>Expected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected2__c</fullName>
        <description>Expected Value of Year2 Wafer Starts</description>
        <inlineHelpText>Expected Value of Year2 Wafer Starts</inlineHelpText>
        <label>Expected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected3__c</fullName>
        <description>Expected Value of Year3 Wafer Starts</description>
        <inlineHelpText>Expected Value of Year3 Wafer Starts</inlineHelpText>
        <label>Expected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FAE_Email__c</fullName>
        <description>Email of the Primary FAE</description>
        <inlineHelpText>Email of the Primary FAE</inlineHelpText>
        <label>FAE Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FAE_Name__c</fullName>
        <description>Name of the Primary Field Application Engineer</description>
        <inlineHelpText>Name of the Primary Field Application Engineer</inlineHelpText>
        <label>FAE Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAE_Phone__c</fullName>
        <description>Phone of the Primary FAE</description>
        <inlineHelpText>Phone of the Primary Field Application Engineer</inlineHelpText>
        <label>FAE Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FAE_Review_T__c</fullName>
        <label>FAE Review (T)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FDK__c</fullName>
        <label>FDK</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fab__c</fullName>
        <label>Fab</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FAB 1</fullName>
                </value>
                <value>
                    <fullName>FAB 2</fullName>
                </value>
                <value>
                    <fullName>FAB 3</fullName>
                </value>
                <value>
                    <fullName>FAB 3E</fullName>
                </value>
                <value>
                    <fullName>FAB 5</fullName>
                </value>
                <value>
                    <fullName>FAB 6</fullName>
                </value>
                <value>
                    <fullName>FAB 7</fullName>
                </value>
                <value>
                    <fullName>FAB 8</fullName>
                </value>
                <value>
                    <fullName>FAB 9</fullName>
                </value>
                <value>
                    <fullName>FAB 10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fin_Range__c</fullName>
        <label>Fin Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_DK_Need_by__c</fullName>
        <label>Final DK Need by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Physical_Views__c</fullName>
        <description>Final Physical View Date</description>
        <inlineHelpText>Final Physical View Date</inlineHelpText>
        <label>Final Physical Views</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fout_Range__c</fullName>
        <label>Fout Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency_Topspeed__c</fullName>
        <label>Frequency Topspeed</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Front_End_DK_Need_by__c</fullName>
        <label>Front End DK Need by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Front_end_Views__c</fullName>
        <description>Front End View Date</description>
        <inlineHelpText>Front End View Date</inlineHelpText>
        <label>Front-end Views</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding_Source_Approved__c</fullName>
        <label>Funding Source Approved?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding_and_Schedule_Match__c</fullName>
        <label>Funding and Schedule Match</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes - Proceed to Sizing</fullName>
                </value>
                <value>
                    <fullName>No - Do not proceed</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GMPL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GMPL</label>
        <referenceTo>GMPL_BX009__c</referenceTo>
        <relationshipLabel>IP Requests</relationshipLabel>
        <relationshipName>IP_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gate_Density__c</fullName>
        <label>Gate Density</label>
        <length>200</length>
        <type>Text</type>
    </fields>
</CustomObject>